removing comments